small changes to headers

--- a/frontend/FullStack/src/app/about/about.component.html
+++ b/frontend/FullStack/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card-container mat-elevation-z20">
     <mat-card-title>
-        ACME INC.
+        About Us
     </mat-card-title>
     <div class="break"></div>
     <mat-card-content>
@@ -9,7 +9,7 @@
             <p>
                 We are ACME Incorporated, a subsidiary of StewCo designed to create products for YOU that will suit your every need! Need a cucumber that can walk on fire? We got it! 
                 Need a dog that can meow but only on Thursdays! We got that too! Anything you can think of we have in our stock, you just need to want it and we either got it, or 
-                we'll get it for you! Our sponsors Northeastern Brews and Vibe Veterans LLC can vouch that our products only have a <b>72% failure rate</b>, a 20% less failure rate than
+                we'll get it for you! Our sponsors Northeastern Brews and Vibe Veterans LLC can vouch that our products only have a <b>72% failure rate</b>, a 22% less failure rate than
                 HoleBoat Inc.!
             </p>
             <p>
