--- a/frontend/FullStack/src/styles.css
+++ b/frontend/FullStack/src/styles.css
@@ -2,3 +2,4 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.reading-block { overflow: visible !important;} /* fix ngx-gauge */
