graph scaling added

--- a/frontend/FullStack/src/app/welcome/welcome.component.html
+++ b/frontend/FullStack/src/app/welcome/welcome.component.html
@@ -57,6 +57,7 @@
                 [yAxis]="yAxis"
                 [xAxisLabel]="xAxisLabel"
                 [yAxisLabel]="yAxisLabel"
+                [autoScale]="autoScale"
                 [results]="chartData"
                 >
             </ngx-charts-line-chart>
