GlobalProductStatistics component added

--- a/frontend/FullStack/src/app/app.component.css
+++ b/frontend/FullStack/src/app/app.component.css
@@ -48,3 +48,9 @@
     text-decoration: none;
     color: inherit;
 }
+
+.banner .separator {
+    margin-bottom: 5px;
+    color: white;
+    font-size: 24px;
+}
