--- a/frontend/FullStack/src/app/app.component.html
+++ b/frontend/FullStack/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="background">
   <div class="banner">
     <span class="header"><a routerLink="/welcome">ACME Products</a></span>
-    <li><a routerLink="/products">Products</a></li>
-    <li><a routerLink="/about">About</a></li>
+    <li><a routerLink="/gloprodustats">Global Product Statistics</a></li> <span class="separator">|</span> 
+    <li><a routerLink="/products">Product List</a></li> <span class="separator">|</span>
+    <li><a routerLink="/about">About</a></li> 
   </div>
   <router-outlet></router-outlet>
 </div>
