--- a/frontend/FullStack/src/app/welcome/welcome.component.html
+++ b/frontend/FullStack/src/app/welcome/welcome.component.html
@@ -51,13 +51,15 @@
                 [view]="view"
                 [scheme]="colorScheme"
                 [legend]="legend"
+                [animations]="animations"
                 [showXAxisLabel]="showXAxisLabel"
                 [showYAxisLabel]="showYAxisLabel"
                 [xAxis]="xAxis"
                 [yAxis]="yAxis"
                 [xAxisLabel]="xAxisLabel"
                 [yAxisLabel]="yAxisLabel"
-                [autoScale]="autoScale"
+                [yScaleMax]="yScaleMax"
+                [yScaleMin]="yScaleMin"
                 [results]="chartData"
                 >
             </ngx-charts-line-chart>
