--- a/frontend/FullStack/src/app/global-product-statistics/global-product-statistics.component.css
+++ b/frontend/FullStack/src/app/global-product-statistics/global-product-statistics.component.css
@@ -3,11 +3,31 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: calc(100%-20px);
 }
 
 .large-pie-chart {
-    text-align: center;
-    width: 1080px;
-    height: 1080px;
+    margin: auto;
+    margin-top: 40px;
+}
+
+@media screen and (max-width: 1500px) {
+    .large-pie-chart {
+        width: 450px;
+        height: 450px;
+    }
+}
+
+@media screen and (max-width: 2200px) and (min-width: 1501px) {
+    .large-pie-chart {
+        width: 700px;
+        height: 700px;
+    }
+}
+
+@media screen and (min-width: 2201px) {
+    .large-pie-chart {
+        width: 1000px;
+        height: 1000px;
+    }
 }
