filtration and routing set up for product information page

--- a/frontend/FullStack/src/app/product-list/product-list.component.css
+++ b/frontend/FullStack/src/app/product-list/product-list.component.css
@@ -9,8 +9,14 @@
     text-align: center;
 }
 
+.filter-dropdown {
+    font-size: 12px;
+    width: 150px;
+}
+
 .search-bar {
     text-align: right;
+    margin-bottom: 20px;
 }
 
 .product-list-card {
