--- a/frontend/FullStack/src/app/product-list/product-list.component.html
+++ b/frontend/FullStack/src/app/product-list/product-list.component.html
@@ -4,10 +4,21 @@
             ACME INCORPORATION OFFICIAL PRODUCT LIST
         </mat-card-title>
         <mat-card-title class="search-bar">
-            Search: <input type="text" [(ngModel)]='filter'>
+            <mat-form-field appearance="fill" class="filter-dropdown">
+                <mat-label>Search By:</mat-label>
+                <mat-select [(value)]='filterType' placeholder="Mode">
+                    <mat-option value="Name">Name</mat-option>
+                    <mat-option value="Category">Category</mat-option>
+                    <mat-option value="ACME Rating">ACME Rating</mat-option>
+                    <mat-option value="User Rating">User Rating</mat-option>
+                </mat-select>
+            </mat-form-field>
+            
+            
+            <input type="text" [(ngModel)]='filter'><br>
         </mat-card-title>
         <mat-card-content *ngFor="let product of filteredPList">
-            <mat-card class="product-card mat-elevation-z6">
+            <mat-card class="product-card mat-elevation-z6" (click)="gotoInfoPage(product.product_id)">
                 <mat-card-title>{{product.product_name}}</mat-card-title>
                 <mat-card-content>
                     <b>Classification: </b>{{product.category}}<br>
