--- a/frontend/FullStack/src/app/app.component.css
+++ b/frontend/FullStack/src/app/app.component.css
@@ -2,8 +2,7 @@
     width: 100%;
     height: 100%;
 
-    background: url("../assets/lines.png");
-    background-size: cover;    
+    background: white;
 }
 
 .banner {
