--- a/frontend/FullStack/src/app/product-list/product-list.component.css
+++ b/frontend/FullStack/src/app/product-list/product-list.component.css
@@ -32,6 +32,7 @@
     flex-wrap: wrap;
     align-items: center; */
     text-align: left;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 1000px) {
