--- a/frontend/FullStack/src/app/app.component.html
+++ b/frontend/FullStack/src/app/app.component.html
@@ -3,6 +3,7 @@
     <span class="header"><a routerLink="/welcome">ACME Products</a></span>
     <li><a routerLink="/gloprodustats">Global Product Statistics</a></li> <span class="separator">|</span> 
     <li><a routerLink="/products">Product List</a></li> <span class="separator">|</span>
+    <li><a routerLink="/suggestionprodu">Add Product Suggestion</a></li> <span class="separator">|</span>
     <li><a routerLink="/about">About</a></li> 
   </div>
   <router-outlet></router-outlet>
