--- a/frontend/FullStack/src/app/app.component.css
+++ b/frontend/FullStack/src/app/app.component.css
@@ -5,11 +5,20 @@
     background: white;
 }
 
-.banner {
-    /* banner */
+.banner-main {
     width: 100%;
     height: 50px;
     background-color: crimson;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.banner-left {
+    /* banner-left */
+    width: 90%;
+    height: inherit;
     
     /* flex styling */
     display: flex;
@@ -17,7 +26,7 @@
     align-items: center;
 }
 
-.banner .header {
+.banner-left .header {
     color: white;
     padding-left: 20px;
     padding-right: 10px;
@@ -25,12 +34,12 @@
     font-size: 24px;
 }
 
-.banner .header:hover {
+.banner-left .header:hover {
     color: orange;
     cursor: pointer;
 }
 
-.banner li {
+.banner-left li {
     color: gainsboro;
     padding-left: 10px;
     padding-right: 10px;
@@ -38,18 +47,48 @@
     font-size: 20px;
 }
 
-.banner li:hover {
+.banner-left li:hover {
     color: orange;
     cursor: pointer;
 }
 
-.banner a {
+.banner-left a {
     text-decoration: none;
     color: inherit;
 }
 
-.banner .separator {
+.banner-left .separator {
     margin-bottom: 5px;
     color: white;
     font-size: 24px;
+}
+
+.banner-right {
+    text-align: right;
+    width: 10%;
+    height: inherit;
+
+    /* flex styling */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: right;
+}
+
+.banner-right li {
+    text-align: right;
+    color: gainsboro;
+    padding-right: 20px;
+    list-style: none;
+    font-size: 20px;
+}
+
+.banner-right li:hover {
+    color: orange;
+    cursor: pointer;
+}
+
+.banner-right a {
+    text-decoration: none;
+    color: inherit;
 }
