user submission page, and refactor for new information component (TODO)

--- a/frontend/FullStack/src/app-default/app.component.html
+++ b/frontend/FullStack/src/app-default/app.component.html
@@ -4,6 +4,7 @@
       <span class="header"><a routerLink="/welcome">ACME Products</a></span>
       <li><a routerLink="/gloprodustats">Global Product Statistics</a></li> <span class="separator">|</span> 
       <li><a routerLink="/products">Product List</a></li> <span class="separator">|</span>
+      <li><a routerLink="/usersubs">User Submissions</a></li> <span class="separator">|</span>
       <li><a routerLink="/suggestionprodu">Add Product Suggestion</a></li> <span class="separator">|</span>
       <li><a routerLink="/about">About</a></li> 
     </div>
