--- a/frontend/FullStack/src/app-default/proposal-list/proposal-list.component.css
+++ b/frontend/FullStack/src/app-default/proposal-list/proposal-list.component.css
@@ -19,35 +19,36 @@
     margin-bottom: 20px;
 }
 
-.product-list-card {
+.proposal-list-card {
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     background-color: #efefef;
 }
 
-.product-card {
+.proposal-card {
     /* display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center; */
     text-align: left;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 1000px) {
-    .product-list-card {
+    .proposal-list-card {
         width: 95%;
     }
 }
 
 @media screen and (max-width: 2000px) and (min-width: 1001px) {
-    .product-list-card {
+    .proposal-list-card {
         width: 75%;
     }
 }
 
 @media screen and (min-width: 2001px) {
-    .product-list-card {
+    .proposal-list-card {
         width: 60%;
     }
 }
