--- a/frontend/FullStack/src/app-default/proposal-information/proposal-information.component.html
+++ b/frontend/FullStack/src/app-default/proposal-information/proposal-information.component.html
@@ -1,6 +1,41 @@
-<mat-card *ngIf='proposal' class="proposal-card mat-elevation-z20">
-    <mat-card-title>{{proposal.product_name}}</mat-card-title>
-    <mat-card-content>
-
-    </mat-card-content>
-</mat-card>
+<div class="main-container">
+    <mat-card *ngIf='proposal' class="proposal-card mat-elevation-z20">
+        <mat-card-title>{{proposal.product_name}}</mat-card-title>
+        <mat-card-content>
+            {{proposal.product_description}}
+        </mat-card-content>
+    </mat-card>
+    <mat-card class="comment-container">
+        <mat-card-title class="comment-container-header">
+            <div id="title">Comments</div>
+            <button mat-raised-button (click)="changeCommentBoxState()">+ Add Comment</button>
+        </mat-card-title>
+        
+        <!-- create new comment -->
+        <mat-card id="new-comment-box" *ngIf="commentBoxState">
+            <mat-form-field appearance="outline" class='comment-textbox'>
+                <mat-label>New Comment</mat-label>
+                <textarea #comment_input maxlength="1500" matInput [(ngModel)]='newUserComment'></textarea>
+                <mat-hint align="end">{{comment_input.value?.length || 0}}/1500</mat-hint>
+            </mat-form-field>
+            <mat-card-footer>
+                <button id="comment-post-button" mat-raised-button (click)="postComment()">Post Comment</button>
+            </mat-card-footer>
+        </mat-card>
+        
+        <!-- comment list -->
+        <div *ngIf='proposal'><div id="comment-list" *ngFor="let comment of sortedComments">
+            <mat-card class="comment-card">
+            <div class="comment-card-header">
+                    <mat-card-title>{{comment.comment_author}}</mat-card-title>
+                    <div id="ratio">
+                        <i class="far fa-thumbs-down vote-icon"></i>
+                        <span id="ratio-num">{{comment.comment_ratio | preventUndefinedCommentRatio }}</span>
+                        <i class="far fa-thumbs-up vote-icon"></i>
+                    </div>
+            </div>
+            <mat-card-content>{{comment.comment_text}}</mat-card-content>
+            </mat-card>
+        </div></div>
+    </mat-card>
+</div>
