--- a/frontend/FullStack/src/app-default/login/login.component.html
+++ b/frontend/FullStack/src/app-default/login/login.component.html
@@ -1,1 +1,20 @@
-<p>login works!</p>
+<div class="login-container">
+    <mat-card class="login-card mat-elevation-z20">
+        <mat-card-title>ACME Inc. Login</mat-card-title>
+        <mat-card-content>
+            <mat-form-field appearance="outline">
+                <mat-label>Username</mat-label>
+                <input matInput #user type="text" [(ngModel)]="user_name">
+                <mat-hint align="end">{{user.value?.length || 0}}/50</mat-hint>
+            </mat-form-field>
+            <span class="fail" *ngIf="uFail">Username is required.</span>
+            <mat-form-field appearance="outline">
+                <mat-label>Password</mat-label>
+                <input matInput #pass type="text" [(ngModel)]="password">
+                <mat-hint align="end">{{pass.value?.length || 0}}/50</mat-hint>
+            </mat-form-field>
+            <span class="fail" *ngIf="pFail">Password is required.</span>
+            <button mat-raised-button (click)="login()">Login</button>
+        </mat-card-content>
+    </mat-card>
+</div>
