--- a/frontend/FullStack/src/app-default/login/login.component.html
+++ b/frontend/FullStack/src/app-default/login/login.component.html
@@ -14,6 +14,7 @@
                 <mat-hint align="end">{{pass.value?.length || 0}}/50</mat-hint>
             </mat-form-field>
             <span class="fail" *ngIf="pFail">Password is required.</span>
+            <a routerLink="/register">Don't have an account? Register here!</a>
             <button mat-raised-button (click)="login()">Login</button>
         </mat-card-content>
     </mat-card>
