--- a/frontend/FullStack/src/app-default/register/register.component.css
+++ b/frontend/FullStack/src/app-default/register/register.component.css
@@ -1,11 +1,16 @@
-.login-container {
+.register-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.login-card {
+mat-form-field {
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+.register-card {
     margin-top: 20px;
 
     /* inherit flex properties from main container */
@@ -16,15 +21,17 @@
 
 }
 
-.login-card mat-card-content {
+.register-card mat-card-content {
     /* inherit flex properties from main container */
     display: inherit;
     flex-direction: inherit;
     justify-content: inherit;
     align-items: inherit;
+    margin-bottom: 20px;
 }
 
-.login-card mat-card-title {
+.register-card mat-card-title {
+    margin-top: 20px;
     font-size: 30px;
     text-align: center;
     padding-bottom: 30px;
@@ -35,32 +42,35 @@
     font-size: 10px;
 }
 
-a {
-    margin: 20px;
-    text-decoration: none;
-    font-size: 12px;
+.success {
+    color: green;
+    font-size: 10px;
+}
+
+.button {
+    margin-top: 10px;
 }
 
 @media screen and (max-width: 1000px) {
-    .login-card {
+    .register-card {
         width: 100%;
     }
 }
 
 @media screen and (max-width: 1500px) and (min-width: 1001px) {
-    .login-card {
+    .register-card {
         width: 95%;
     }
 }
 
 @media screen and (max-width: 2200px) and (min-width: 1501px) {
-    .login-card {
+    .register-card {
         width: 70%;
     }
 }
 
 @media screen and (min-width: 2201px) {
-    .login-card {
+    .register-card {
         width: 60%;
     }
 }
